fix notification hidden/visible

--- a/CSS/main-widgets.css
+++ b/CSS/main-widgets.css
@@ -284,18 +284,22 @@ a {
 
 /* Notification popUp */
 .notification-popup {
-    margin-bottom: 0;
+    margin: 0;
+    cursor: default;
+    user-select: none;
+    pointer-events: none;
     transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .notification-popup.hidden {
     margin-top: 0;
     opacity: 0;
-    transform: translateY(15px) scale(0.90);
     overflow: hidden;
+    transform: translateY(15px) scale(0.9);
 }
 .notification-popup.visible {
     margin-top: 10px;
     opacity: 1;
+    overflow: hidden;
     transform: translateY(0) scale(1);
 }
 
@@ -307,7 +311,6 @@ a {
     font-size: var(--aw-text-size);
     color: var(--aw-color-text-primary);
     padding: 14px 18px;
-    min-width: 200px;
     border-left: 4px solid transparent;
     border-radius: 16px;
     box-shadow: var(--aw-elements-shadow), inset 0 0 6px rgba(0, 0, 0, 0.35);
@@ -358,7 +361,7 @@ a {
     background: linear-gradient(
         90deg,
         transparent 0%,
-        var(--aw-status-color) 50%,
+        var(--aw-status-color) 75%,
         transparent 100%
     );
     animation: notificationProgress 3s ease-out forwards;
@@ -376,7 +379,6 @@ a {
     to {
         opacity: 0;
         transform: translateX(15px);
-        pointer-events: none;
     }
 }
 
